--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.2",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "mongoose-unique-validator": "^3.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "password-validator": "^5.3.0"
   }
 }
