--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
+# Renommer le fichier `.env.example` en `.env` et y mettre vos variables d'environnement
 # identifiants MongoDB
 MONGODB_URI = mongodb+srv://<USER>:<PASSWORD>@<HOST>/<DATABASENAME>?retryWrites=true&w=majority
-
-
 # Random token secret
 RANDOM_TOKEN_SECRET = <YOURTOKENSECRET>
